# predict-stock-prices

./: .env.example  .gitignore  README.md  apple_lstm_model.h5  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/: aapl_stock_data.csv  apple_stock_data.csv  index_fund_stock_data.csv  tech_stock_data.csv
db/init/: 01_extensions.sql
docs/: VISION_AND_ROADMAP.md
docs/plans/: dbnomics-macro-ingestor.md  live-updates.md  news-sentiment.md  technical-indicators.md
scripts/: backup.sh
src/: ingest.py  ingest_dbnomics.py  ingest_filings.py  ingest_news.py  multi_feature_model.py  preprocess.py  search_news.py  serve.py  train_lstm.py  worker.py
src/data/: apple_stock_data.csv  tech_stock_data.csv
src/market_intel/: __init__.py  cache.py  config.py  embeddings.py  geo.py  indicators.py  scheduler.py  search.py  sentiment.py
src/market_intel/api/: __init__.py  app.py
src/market_intel/data/: __init__.py  fetch.py  loaders.py
src/market_intel/ingest/: __init__.py  dbnomics.py  filings.py  macro.py  market.py  news.py  validation.py
src/market_intel/models/: __init__.py  lstm.py  windowing.py
src/market_intel/storage/: __init__.py  db.py  (+6 more)
tests/: test_api.py  test_cache.py  test_config.py  test_dbnomics.py  test_embeddings.py  test_filings.py  test_fred.py  test_geo.py  test_indicators.py  test_ingest_market.py  test_loaders.py  test_lstm_smoke.py  test_macro_storage.py  test_market_live.py  test_news.py  test_scheduler.py  test_search.py  test_sentiment.py  test_storage.py  test_stream.py  test_validation.py  test_windowing.py
(+1 files in other folders)
